Fix spacing between image, h1 and paragraph

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ footer {
 h1 {
   font-size: 22px;
   font-weight: 600;
+  margin: 0;
 }
 
 h1:hover,
@@ -101,6 +102,14 @@ h1:active {
 .nft-image:active,
 .nft-image:hover {
   color: var(--active-color);
+}
+
+.details {
+  margin-top: 24px;
+}
+
+.description {
+  margin: 16px 0 24px 0;
 }
 
 .eth-values {
